--- a/about.html
+++ b/about.html
@@ -1,92 +1,64 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>About — Project.PAW</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Project.PAW - About</title>
+  <link rel="stylesheet" href="styles.css">
+  <script type="module">
+    import { auth, signOut } from "./js/firebase.js";
+
+    window.logout = async () => {
+      try {
+        await signOut(auth);
+        alert("로그아웃 완료! 다시 로그인 해주세요.");
+        location.href = "index.html";
+      } catch (e) {
+        console.error("로그아웃 실패:", e);
+      }
+    };
+  </script>
   <style>
-    :root{--bg:#0a0f1d;--line:#1a2342;--primary:#1f6feb}
-    *{box-sizing:border-box} html,body{margin:0;background:var(--bg);color:#e6ecff;font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto}
-    a{text-decoration:none;color:inherit}
-    .container{max-width:900px;margin:0 auto;padding:0 16px}
-    header{position:sticky;top:0;background:#0b1222;border-bottom:1px solid var(--line)}
-    header .inner{display:flex;align-items:center;justify-content:space-between;padding:14px 0}
-    .btn{appearance:none;border:0;border-radius:12px;padding:10px 14px;font-weight:700;cursor:pointer}
-    .btn.primary{background:var(--primary);color:#fff}
-    .btn.ghost{background:#ffffff12}
-    .section{padding:28px 0}
-    h1{margin:0 0 8px 0;font-size:clamp(22px,3.4vw,30px);font-weight:900}
-    h2{margin:16px 0 8px;font-size:18px}
-    blockquote{margin:8px 0;padding-left:12px;border-left:3px solid #2947a3;color:#cfe0ff}
-    li{line-height:1.7}
-    footer{border-top:1px solid var(--line);margin-top:28px;color:#9aa8c7}
-    .foot{display:flex;justify-content:space-between;align-items:center;padding:24px 0}
+    body { margin: 0; font-family: "Noto Sans KR", sans-serif; background: #fff; color: #333; }
+    header {
+      display: flex; justify-content: space-between; align-items: center;
+      padding: 1rem 2rem; background: #ffffff; border-bottom: 1px solid #eee;
+      position: sticky; top: 0; z-index: 10;
+    }
+    nav { display: flex; gap: 1rem; }
+    nav a, nav button {
+      background: none; border: none; cursor: pointer;
+      font-size: 1rem; color: #333; text-decoration: none; transition: color 0.2s;
+    }
+    nav a:hover, nav button:hover { color: #ff6b6b; }
+    main { padding: 2rem; max-width: 800px; margin: auto; line-height: 1.6; }
   </style>
 </head>
 <body>
   <header>
-    <div class="container inner">
-      <a class="brand" href="index.html">Project.PAW</a>
-      <nav class="nav">
-        <a class="btn ghost" href="project_list.html">후원하기</a>
-        <a class="btn primary" href="create.html">등록하기</a>
-      </nav>
-    </div>
+    <h1>🐾 Project.PAW</h1>
+    <nav>
+      <a href="index.html">홈</a>
+      <a href="project_list.html">후원하기</a>
+      <a href="create.html">등록하기</a>
+      <button onclick="logout()">로그아웃</button>
+    </nav>
   </header>
 
-  <main class="container">
-    <section class="section">
-      <h1>운영철학 v2 (7.30)</h1>
-
-      <h2>🪢 철학적 한 줄들</h2>
-      <h3>1. "도움은 본능, 연결은 선택"</h3>
-      <blockquote>Project.PAW의 핵심 정신. 모두가 돕고 싶은 본능은 있지만, 실제로 행동하게 만드는 건 '선택'입니다.</blockquote>
-
-      <h3>2. "망설임을 용기로 바꾸는 플랫폼"</h3>
-      <blockquote>구조할까 말까 망설이던 순간, 마음을 행동으로 바꿔주는 트리거가 되는 플랫폼을 지향합니다.</blockquote>
-
-      <h3>3. "책임의 끝과 공감의 시작이 만나는 곳."</h3>
-      <blockquote>구조자의 책임감과 후원자의 공감이 교차하는 지점을 표현한 압축형 문장입니다.</blockquote>
-
-      <h3>4. "숫자보다 감정."</h3>
-      <blockquote>구조한 수보다 연결된 ‘마음의 수’를 더 중요하게 여깁니다.</blockquote>
-
-      <h3>5. "주는 사람도, 받는 사람도 행복하게."</h3>
-      <blockquote>베풂이 고통이 아닌 기쁨이 되도록 설계하는 구조를 추구합니다.</blockquote>
-
-      <h3>6. "발바닥 하나가, 마음 하나다."</h3>
-      <blockquote>고양이 발바닥 시각 상징은 단순 귀여움이 아니라, 연결된 마음을 나타내는 감정의 아이콘입니다.</blockquote>
-
-      <h2>🧱 구조 및 운영 설계 철학</h2>
-      <ol>
-        <li>초기에는 병원 직접결제 없이, 구조자에게 전달. 신뢰가 쌓이면 병원 direct payment로.</li>
-        <li>기부금은 100% 구조자에게 전달. PG 수수료는 플랫폼이 부담.</li>
-        <li>기존 복지 시스템이 닿지 못하는 사각지대를, 개인 대 개인의 연결로 메운다.</li>
-        <li>플랫폼의 본질은 구조된 동물 수가 아니라, 구조자와 후원자가 얼마나 연결됐는가다.</li>
-        <li>도움은 전달되지만, 그보다 더 깊은 건 연결의 흔적이다.</li>
-        <li>신뢰는 설계되는 것이다 — 후기/자기부담 증빙/이행률/후속 모금/병원 direct 등 단계적 신뢰 전환.</li>
-        <li>자격 있는 구조자만 구조 요청할 수 있다.</li>
-        <li>기부는 돈이지만, 후기는 연결이다.</li>
-      </ol>
-
-      <h2>🌱 브랜딩, 디자인, 확장 방향</h2>
-      <ol>
-        <li>동물에서 시작하지만, 결국 사람까지 닿는 구조.</li>
-        <li>Social Appreciation Level을 올리는 플랫폼.</li>
-        <li>정부가 부러워할 플랫폼 — 민간이 만든 새로운 복지 연결 인프라.</li>
-        <li>Simple & 감성.</li>
-      </ol>
-    </section>
+  <main>
+    <h2>About Project.PAW</h2>
+    <p>🐾 Project.PAW는 구조자와 후원자를 연결하는 따뜻한 플랫폼입니다.</p>
+    <p>“도움은 본능, 연결은 선택”이라는 철학을 바탕으로, 망설임을 용기로 바꾸는 사회적 인프라를 지향합니다.</p>
+    <p>우리는 숫자보다 감정을, 결과보다 연결을 중시합니다. 주는 사람도, 받는 사람도 행복한 경험을 만드는 것이 목표입니다.</p>
+    <p>앞으로 Project.PAW는 동물 복지를 넘어, 사람과 사회 전반의 사각지대까지 확장해 나갈 것입니다.</p>
   </main>
 
-  <footer>
-    <div class="container foot">
-      <span>© Project.PAW</span>
-      <nav class="footer-nav">
-        <a href="about.html">About</a>
-        <a href="login.html">로그인</a>
-      </nav>
-    </div>
+  <footer style="margin-top:3rem; padding:2rem; background:#fafafa; text-align:center; font-size:0.9rem; color:#666;">
+    <p>© 2025 Project.PAW</p>
+    <p>
+      <a href="about.html">About</a> | 
+      <a href="login.html">로그인</a>
+    </p>
   </footer>
 </body>
 </html>
